# clustro

./: .gitignore  README.md  clustro_cursor_handoff.md  pyproject.toml
.github/workflows/: ci.yml
docs/: implementation_status.md
examples/: run_benchmark_synthetic.py  run_deep_synthetic_smoke.py  run_known_clusters.py  run_synthetic_smoke.py
examples/configs/: known_clusters_example.yaml  sepsis_example.yaml  stroke_deep_example.yaml  stroke_example.yaml
examples/data/: known_clusters.csv
src/clustro/: __init__.py  cli.py  experiment.py
src/clustro/benchmark/: calibration.py  reporting.py  runner.py  synthetic.py
tests/: test_acceptance_policy.py  test_acceptance_policy_rerun.py  test_architecture_helpers.py  test_benchmark.py  test_candidate_generation.py  test_categorical_string_casting.py  test_classical_methods.py  test_cleanup_fixes.py  test_config.py  test_consensus.py  test_consensus_scalability.py  test_deep_smoke.py  test_deterministic_regression.py  test_full_pipeline_stability.py  test_heldout_interpretation.py  test_interpretation.py  test_interpretation_feature_space.py  test_iterative_imputation.py  test_known_data_validation.py  test_metric_utils.py  test_missing_indicators.py  test_multi_id_outputs.py  test_multiseed_acceptance.py  test_optuna_search.py  test_ordinal_maps.py  test_paths.py  test_perturbation_stability.py  test_publication_readiness.py  test_rare_categories.py  test_ray_orchestration.py  test_resume_status.py  test_scientific_fixes.py  test_search_flow_counts.py  test_shap_utils.py  test_smoke.py  test_uncertainty.py
(+60 files in other folders)
