[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clustro"
version = "0.1.0"
description = "Stability-first clustering for tabular medical datasets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Alireza Vafaei Sadr" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "umap-learn>=0.5.6",
  "hdbscan>=0.8.33",
  "optuna>=3.6",
  "pydantic>=2.7",
  "PyYAML>=6.0.1",
  "joblib>=1.3",
  "pyarrow>=15.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.9",
]
gpu = [
  "cuml-cu12>=25.2; platform_system == 'Linux'",
]
deep = [
  "torch>=2.3",
  "xgboost>=2.0",
  "shap>=0.45",
]
tracking = [
  "mlflow>=2.12",
  "ray[default]>=2.20",
]

[project.scripts]
clustro = "clustro.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
clustro = ["config/defaults.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true
